--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -22,7 +22,9 @@
             <div class="links" id="links" >
                 <div class="nav-links"><a class="top-nav-links" id="home-btn" href="/">HOME</a></div>
                 <!--<div class="nav-links"><a class="top-nav-links" id="in-stock-btn" href="/instock/">IN STOCK NOW</a></div>-->
-                <div class="nav-links"><a class="top-nav-links" id="vector3-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
+                <div class="nav-links"><a class="top-nav-links" id="inventory-btn" href="/manager/inventory/">Inventory</a>
+                </div>
+                <div class="nav-links"><a class="top-nav-links" id="coming-soon-btn" href="/manager/inventory-comingsoon/">Coming Soon</a>
                     <div class="dropdown-content">
                         <a href="/instock-sportrigs/">all</a>
                         <a href="###">by type</a>
@@ -30,25 +32,25 @@
                         <a href="###">by customer</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="tandem-btn" href="/manager/inventory-instock/">In Stock</a>
+                <div class="nav-links"><a class="top-nav-links" id="instock-btn" href="/manager/inventory-instock/">In Stock</a>
                     <div class="dropdown-content">
                         <a href="####">link1</a>
                         <a href="###">link2</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="student-btn" href="/manager/inventory-sold/">Sold</a>
+                <div class="nav-links"><a class="top-nav-links" id="sold-btn" href="/manager/inventory-sold/">Sold</a>
                     <div class="dropdown-content">
                         <a href="###">link1</a>
                         <a href="###">link2</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="canopies-btn" href="/manager/inventory-shipping/">Shipping</a>
+                <div class="nav-links"><a class="top-nav-links" id="shipping-btn" href="/manager/inventory-shipping/">Shipping</a>
                     <div class="dropdown-content">
                         <a href="###">llink1</a>
                         <a href="###">link2</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="javelin-btn" href="/manager/inventory-completed/">Completed Orders</a>
+                <div class="nav-links"><a class="top-nav-links" id="completed-btn" href="/manager/inventory-completed/">Completed Orders</a>
                     <div class="dropdown-content">
                         <a href="###">stuff1</a>
                         <a href="###"> stuff2</a>
