--- a/backend/templates/inventory-comingsoon.html
+++ b/backend/templates/inventory-comingsoon.html
@@ -1,6 +1,6 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory.css' %}">{% endblock %}
+{% block styles %}{% endblock %}
 
 
 {% block nothing %}
