--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="{% static 'images/e53ea5_d747d21e4fc34a69b289aa2382dfc606.png' %}">
     <link rel="apple-touch-icon" href="{% static 'images/e53ea5_d747d21e4fc34a69b289aa2382dfc606.png' %}">
     <link rel="stylesheet" href="{% static 'css/admin-index-styles.css' %}">
-    {% block styles %}<link rel="stylesheet"  href="{% static 'css/inventory.css' %}">{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/inventory-nav-bar.css' %}">
+    {% block styles %}<link rel="stylesheet" href="{% static 'css/inventory.css' %}">{% endblock %}
     {% block title %}<title>Inventory</title>{% endblock %}
 </head>
 
