--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -19,7 +19,7 @@
   <div class="nav-container" {% block js %}{% endblock %}>
         <div class="left-nav">
             <div class="logo" id="logo-div"><img src="{% static 'images/logo.png' %}"></div>
-            <div class="title-banner"><a href="/admin/frontend/items"><h2>Full Flight Sports Admin</h2><h2>Inventory Manger</h2></a></div>
+            <div class="title-banner"><a href="/admin/backend/"><h2>Full Flight Sports Admin</h2><h2>Inventory Manger</h2></a></div>
             <div class="links" id="links" >
                 <div class="nav-links"><a class="top-nav-links" id="home-btn" href="/">HOME</a></div>
                 <!--<div class="nav-links"><a class="top-nav-links" id="in-stock-btn" href="/instock/">IN STOCK NOW</a></div>-->
