--- a/backend/static/css/inventory-nav-bar.css
+++ b/backend/static/css/inventory-nav-bar.css
@@ -136,3 +136,24 @@
 .nav-container {
     border: 10px solid red;
 }
+
+main {
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+
+.left-sidebar {
+    position: sticky;
+    top: 300px;
+}
+
+#left-sidebar {
+    position: sticky;
+    top: 300px;
+    height: 10px;
+}
+
+.main-div {
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
