--- a/backend/templates/inventory-comingsoon.html
+++ b/backend/templates/inventory-comingsoon.html
@@ -1,6 +1,7 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}{% endblock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-comingsoon.css' %}">{% endlbock %}
+{% block title %}<title>Coming Soon - Inventory</title>{% endblock %}
 
 
 {% block nothing %}
