--- a/backend/templates/inventory-completed.html
+++ b/backend/templates/inventory-completed.html
@@ -1,4 +1,6 @@
 {% extends 'inventory.html' %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-completed.css' %}">{% endlbock %}
+{% block title %}<title>Completed Inventory</title>{% endblock %}
 
 {% block nothing %}
 {% endblock %}
