--- a/backend/templates/inventory-instock.html
+++ b/backend/templates/inventory-instock.html
@@ -1,5 +1,6 @@
 {% extends 'inventory.html' %}
-
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-instock.css' %}">{% endlbock %}
+{% block title %}<title>In Stock Inventory</title>{% endblock %}
 
 {% block nothing %}
 {% endblock %}
