--- a/backend/templates/inventory-shipping.html
+++ b/backend/templates/inventory-shipping.html
@@ -1,5 +1,6 @@
 {% extends 'inventory.html' %}
-
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-shipping.css' %}">{% endlbock %}
+{% block title %}<title>Shipped Inventory</title>{% endblock %}
 
 {% block nothing %}
 {% endblock %}
