--- a/backend/templates/inventory-sold.html
+++ b/backend/templates/inventory-sold.html
@@ -1,4 +1,6 @@
 {% extends 'inventory.html' %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-sold.css' %}">{% endlbock %}
+{% block title %}<title>Sold Inventory</title>{% endblock %}
 
 {% block nothing %}
 {% endblock %}
