--- a/backend/templates/inventory-completed.html
+++ b/backend/templates/inventory-completed.html
@@ -1,5 +1,5 @@
 {% extends 'inventory.html' %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-completed.css' %}">{% endlbock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-completed.css' %}">{% endblock %}
 {% block title %}<title>Completed Inventory</title>{% endblock %}
 
 {% block nothing %}
