--- a/backend/templates/inventory-sold.html
+++ b/backend/templates/inventory-sold.html
@@ -1,5 +1,5 @@
 {% extends 'inventory.html' %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-sold.css' %}">{% endlbock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-sold.css' %}">{% endblock %}
 {% block title %}<title>Sold Inventory</title>{% endblock %}
 
 {% block nothing %}
