--- a/backend/templates/inventory-instock.html
+++ b/backend/templates/inventory-instock.html
@@ -1,4 +1,5 @@
 {% extends 'inventory.html' %}
+{% load static %}
 {% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-instock.css' %}">{% endblock %}
 {% block title %}<title>In Stock Inventory</title>{% endblock %}
 
