--- a/backend/templates/inventory-shipping.html
+++ b/backend/templates/inventory-shipping.html
@@ -1,4 +1,5 @@
 {% extends 'inventory.html' %}
+{% load static %}
 {% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-shipping.css' %}">{% endblock %}
 {% block title %}<title>Shipped Inventory</title>{% endblock %}
 
