--- a/backend/templates/index-admin.html
+++ b/backend/templates/index-admin.html
@@ -19,8 +19,8 @@
             <div class="title-banner"><a href="/admin/backend/"><h2>Full Flight Sports Admin</h2></a></div>
         </div>
   <div class="admin-nav-links" >
-      <a class="admin-nav-link" href="/manager/media/">Media Manager</a>
-      <a class="admin-nav-link" href="/manager/builder/">Build/Update Items</a>
+      <a class="admin-nav-link" id="media-btn" href="/manager/media/">Media Manager</a>
+      <a class="admin-nav-link" id="build-update-btn" href="/manager/builder/">Build/Update Items</a>
       <a class="admin-nav-link" href="/manager/inventory/">Inventory</a>
       <a class="admin-nav-link" href="/admin/backend/">Admin Backend</a>
       <a class="admin-nav-link" href="/">Website Home</a>
