--- a/backend/static/css/admin-index-styles.css
+++ b/backend/static/css/admin-index-styles.css
@@ -96,7 +96,7 @@ a {
 
 .admin-nav-link {
     padding: 10px;
-    border: 2px solid white;
+    border: 2px solid #b5db1a;
     border-radius: 5px;
     margin: 10px;
     color: red;
