--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -4,9 +4,7 @@
 {% block styles %}<link rel="stylesheet" href="{% static 'css/media-styles.css' %}">{% endblock %}
 {% block title %}<title>Media Manager</title>{% endblock %}
 
-View All Files
-
-
+<div class="media-intro">
 <h3>To Upload a File:</h3>
 <ol>
     <li>Click the button labeled 'browse' below</li>
@@ -22,7 +20,7 @@ or photos via this method! (There will be a private upload file section soon!)</
     (<a target="_blank" href="https://803929774327.signin.aws.amazon.com/console">S3 Bucket Login</a>),
     after logged in click the second link (<a target="_blank" href="https://s3.console.aws.amazon.com/s3/buckets/stockvectorrigs?region=us-east-1&tab=objects">StockVectorRigs S3 Bucket</a>)
     OR search for s3 in the AWS Console search bar at the top of page after login. Select 'stockvectorigs' one under the bucket tab</p>
-
+</div>
 <div id="upload-div">
     <h4>NO SPACES IN File Name! (this can be fixed later, but for now. No spaces please!)</h4>
 <p>Upload Anything to Storage!</p>
