Remove sold buttons

--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -8,9 +8,9 @@
 <h3>To Upload a File:</h3>
 <ol>
     <li>Click the button labeled 'browse' below</li>
-    <li>Select a file to upload</li>
+    <li>Select a file (or multiple files) to upload</li>
 </ol>
-<h3>After following the 2 steps above you will have uploaded the selected file to your Websites main public storage (aka Amazon Cloud). This File is instantly
+<h3>After following the 2 steps above you will have uploaded the selected file(s) to your Websites main public storage (aka Amazon Cloud). This File is instantly
 viewable from the link provided after uploading. At the same time, this will automatically create a new database item under the Media section
     which (located in the left sidebar on the Admin) is attachable to any Inventory Item.
     You can attach an Image or Confirmation-Report by navigating to the Build/Update page, if creating a new item: selecting it from the dropdown
