Media Page updates

--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -10,14 +10,27 @@
     <li>Click the button labeled 'browse' below</li>
     <li>Select a file (or multiple files) to upload</li>
 </ol>
-<h3>After following the 2 steps above you will have uploaded the selected file(s) to your Websites main public storage (aka Amazon Cloud). This File is instantly
-viewable from the link provided after uploading. At the same time, this will automatically create a new database item under the Media section
-    which (located in the left sidebar on the Admin) is attachable to any Inventory Item.
-    You can attach an Image or Confirmation-Report by navigating to the Build/Update page, if creating a new item: selecting it from the dropdown
-    in the Build Form on the left side of the Build/Update page; Or, by updating an already created item: click the Update Picture or Update Confirmation Report button
-    located along the top of page under the nav-bar (Newly uploaded items automatically propagate labeled as the file name you upload with .. example --> 'new_image.jpg'
-    gets stored as 'new_image.jpg') You can find this Image information under the Media section on the left side of your admin page. Also, all
-    Images and Confirmation Reports located in the Cloud are listed below.</h3>
+    <ul>
+        <li><h3>After following the 2 steps above you will have uploaded the selected file(s) to your Websites main public storage (aka Amazon Cloud).</h3></li>
+        <li><h3>This File is instantly
+viewable from the link provided after uploading.</h3></li>
+        <li><h3>At the same time, this will automatically create a new database item under the Media section
+    which (located in the left sidebar on the Admin) is attachable to any Inventory Item.</h3></li>
+        <li><h3>You can attach an Image or Confirmation-Report by navigating to the Build/Update page,</h3></li>
+            <ol>
+                <li><h4>If creating a new item: select it from the dropdown
+    in the Build Form on the left side of the Build/Update page;</h4></li>
+                <li><h4>Or, by updating an already created item: click the Update Picture or Update Confirmation Report button
+    located along the top of page under the nav-bar</h4></li>
+            </ol>
+        <li><h3>(Newly uploaded items automatically propagate labeled as the file name you upload with .. example --> 'new_image.jpg'
+    gets stored as 'new_image.jpg')</h3></li>
+        <li><h3>You can find this Image information under the Media section on the left side of your admin page.</h3></li>
+        <li><h3>Also, all
+    Images and Confirmation Reports located in the Cloud are listed below.</h3></li>
+
+    </ul>
+
 <p style="color: red">All files uploaded are viewable to anyone on the internet. DO NOT upload private files
 or photos via this method! (There will be a private upload file section soon!)</p>
 <p>TO ACCESS BUCKET DIRECTLY: Login to Bucket with the first link
