--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -10,11 +10,12 @@
     <li>Click the button labeled 'browse' below</li>
     <li>Select a file (or multiple files) to upload</li>
 </ol>
+    <div class="instructions">
     <ul>
         <li><h3>After following the 2 steps above you will have uploaded the selected file(s) to your Websites main public storage (aka Amazon Cloud).</h3></li>
         <li><h3>This File is instantly
 viewable from the link provided after uploading.</h3></li>
-        <li><h3>At the same time, this will automatically create a new database item under the Media section
+        <li><h3>At the same time, this will automatically create a new database item(s) under the Media section
     which (located in the left sidebar on the Admin) is attachable to any Inventory Item.</h3></li>
         <li><h3>You can attach an Image or Confirmation-Report by navigating to the Build/Update page,</h3></li>
             <ol>
@@ -30,7 +31,7 @@ viewable from the link provided after uploading.</h3></li>
     Images and Confirmation Reports located in the Cloud are listed below.</h3></li>
 
     </ul>
-
+    </div>
 <p style="color: red">All files uploaded are viewable to anyone on the internet. DO NOT upload private files
 or photos via this method! (There will be a private upload file section soon!)</p>
 <p>TO ACCESS BUCKET DIRECTLY: Login to Bucket with the first link
