--- a/backend/templates/media.html
+++ b/backend/templates/media.html
@@ -5,11 +5,13 @@
 {% block title %}<title>Media Manager</title>{% endblock %}
 
 <div class="media-intro">
+<div class="upload-instructions">
 <h3>To Upload a File:</h3>
 <ol>
     <li>Click the button labeled 'browse' below</li>
     <li>Select a file (or multiple files) to upload</li>
 </ol>
+</div>
     <div class="instructions">
     <ul>
         <li><h3>After following the 2 steps above you will have uploaded the selected file(s) to your Websites main public storage (aka Amazon Cloud).</h3></li>
