Adding sold data submit to inventory pages

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -37,7 +37,7 @@
                 +'<textarea name="info" cols="40" rows="10" id="id_info"></textarea>'
                     //<label htmlFor="id_other">Other:</label>
                 +'<textarea name="other" cols="40" rows="10" id="id_other"></textarea>'
-                +'<input onclick="soldDataSubmit()" type="submit" value="Submit">'
+                +'<input onsubmit="soldDataSubmit()" type="submit" value="Submit">'
             +'</form>'
     }
 
