--- a/api/templates/sold_data_api.html
+++ b/api/templates/sold_data_api.html
@@ -1,1 +1,5 @@
-{{ form }}
+<form method="POST">
+    {% csrf_token %}
+    {{ form }}
+    <button class="" type="submit">Submit</button>
+    </form>
