--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -16,7 +16,7 @@
 <script>
     function sold_Data_form() {
         document.getElementById('sold_data_form').innerHTML =
-           '<form method="POST" action="/api/sold-data-api/">'
+           '<form method="POST" action="/api/sold-data-api/" onsubmit="soldDataSubmit(event)">'
             +'{% csrf_token %}'
                 +'<select name="inventory_item" required id="id_inventory_item">'
                 {% for x in items %}
@@ -37,7 +37,7 @@
                 +'<textarea name="info" cols="40" rows="10" id="id_info"></textarea>'
                     //<label htmlFor="id_other">Other:</label>
                 +'<textarea name="other" cols="40" rows="10" id="id_other"></textarea>'
-                +'<input onsubmit="soldDataSubmit(event)" type="submit" value="Submit">'
+                +'<input  type="submit" value="Submit">'
             +'</form>'
     }
 
