--- a/backend/static/css/inventory.css
+++ b/backend/static/css/inventory.css
@@ -13,4 +13,15 @@
 
 .sold-data-form {
     display: block;
+    border: 5px solid black;
+}
+
+.create-customer-form {
+    display: block;
+    border: 5px solid black;
+}
+
+.form-group {
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
