Adding sold data submit to inventory pages

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -147,7 +147,7 @@
                     <button onclick="sold_Data_form({{ x.id }})">Add Sold Data</button></li>
                     <div class="form-group">
                     <div id="sold_data_form-{{ x.id }}" class="none">
-                        <form method="POST" action="/api/sold-data-api/" onsubmit="DataSubmit(event)">
+                        <form method="POST" action="/api/sold-data-api/" onsubmit="customerDataSubmit(event)">
                             {% csrf_token %}
                             <select name="inventory_item" required id="id_inventory_item">
                                 <option value="{{ x.inventory_item.id }}">{{ x.inventory_item }}</option>
@@ -160,7 +160,7 @@
                                 {% endfor %}
                             </select>
                             <button type="button" onclick="customer_Data_form({{ x.id }})">Create A New Customer</button>
-                            <input type="text" name="date_sold" id="id_date_sold">
+                            <input type="text" name="date_sold" id="id_date_sold" placeholder="Enter Date Sold">
                             <textarea name="info" cols="40" rows="10" id="id_info"></textarea>
                             <textarea name="other" cols="40" rows="10" id="id_other"></textarea>
                             <input  type="submit" value="Submit">
@@ -168,11 +168,11 @@
                     </div>
                     <div id="create-customer-form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/customer-data-api/" onsubmit="DataSubmit(event)">
-                            <input type="text" name="first_name" maxlength="100" required id="id_first_name">
-                            <input type="text" name="last_name" maxlength="100" required id="id_last_name">
-                            <input type="text" name="company_name" maxlength="200" id="id_company_name">
-                            <input type="email" name="email" maxlength="254" required id="id_email">
-                            <input type="number" name="phone_number" required id="id_phone_number">
+                            <input type="text" name="first_name" maxlength="100" required id="id_first_name" placeholder="Enter First Name" }}">
+                            <input type="text" name="last_name" maxlength="100" required id="id_last_name" placeholder="Enter Last Name">
+                            <input type="text" name="company_name" maxlength="200" id="id_company_name" placeholder="Enter Company Name">
+                            <input type="email" name="email" maxlength="254" required id="id_email" placeholder="Enter E-Mail">
+                            <input type="number" name="phone_number" required id="id_phone_number" placeholder="Enter Phone Number">
                             <select name="original_contact" id="id_original_contact">
                                 <option value="" selected>Did this Customer Reach Out Through Website Contact Form?</option>
                                 {% for x in messages %}
