--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -168,6 +168,7 @@
                     </div>
                     <div id="create-customer-form-{{ x.id }}" class="none">
                         <form method="POST" action="/api/customer-data-api/" onsubmit="customerDataSubmit(event)">
+                            {% csrf_token %}
                             <input type="text" name="first_name" maxlength="100" required id="id_first_name" placeholder="Enter First Name" }}">
                             <input type="text" name="last_name" maxlength="100" required id="id_last_name" placeholder="Enter Last Name">
                             <input type="text" name="company_name" maxlength="200" id="id_company_name" placeholder="Enter Company Name">
