--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -11,8 +11,10 @@
 {% block content %}
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
     <div id="container-main" class="container-main">
-    <div id="create-form" class="div-form" onmouseenter="closeFields()"></div>
-            <div class="clicker" onclick="closeFields()"><div class="container-display" id="container-display"></div></div>
+        <div class="clicker" onclick="closeFields()">
+            <div id="create-form" class="div-form" onmouseenter="closeFields()"></div>
+            <div class="container-display" id="container-display"></div>
+        </div>
 
     <div id="display-right" class="display-right">
         <div class="edit-btns-group">
