--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -10,14 +10,8 @@
 
 {% block content %}
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
-    <div id="container-main" class="container-main">
-    <div>
+    <div id="container-main" class="container-main"
         <div id="create-form" class="none" onmouseenter="closeFields()"></div>
-        <div class="clicker" onclick="closeFields()">
-            <div class="container-display" id="container-display"></div>
-        </div>
-    </div>
-
     <div id="display-right" class="display-right">
         <div class="edit-btns-group">
             <button id="display-form-btn" class="btnchanger" onclick="createForm()">Create A New Item</button>
@@ -62,7 +56,6 @@
 
                     <button type="submit">submit</button>
                 </form>
-
             </div>
             <div class="clicker" onclick="closeFields()"><div class="container-display" id="container-display"></div></div>
         </div>
