--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="total-pages-visits"><p>Total Page Visits: {{ total_visits }}</p></div>
-    <div id="container-main" class="container-main"
+    <div id="container-main" class="container-main">
         <div id="create-form" class="none" onmouseenter="closeFields()"></div>
     <div id="display-right" class="display-right">
         <div class="edit-btns-group">
@@ -57,7 +57,7 @@
                     <button type="submit">submit</button>
                 </form>
             </div>
-            <div class="clicker" onclick="closeFields()"><div class="container-display" id="container-display"></div></div>
+            <div class="container-display" id="container-display"></div>
         </div>
     </div>
     </div>
